tests/machine/x/ocaml/list_set_ops.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/list_set_ops.ml", line 3, characters 2-15:
3 |   print_endline ([1;2] union [2;3])
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 3):
   1 | 
   2 | let () =
   3 |   print_endline ([1;2] union [2;3])
   4 |   print_endline ([1;2;3] except [2])
   5 |   print_endline ([1;2;3] intersect [2;4])
